--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ thiserror = "1.0.38"
 tracing = { version = "0.1.37", optional = true }
 http = "0.2.8"
 serde = {version = "1.0.164", features = ["derive"]}
-rusqlite = "0.29.0"
+sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls" ] }
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
