--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,23 @@
         "./Cargo.toml",
         "./Cargo.toml"
     ],
-    "rust-analyzer.showUnlinkedFileNotification": false
+    "rust-analyzer.showUnlinkedFileNotification": false,
+    
+    "emmet.includeLanguages": {
+        "rust": "html",
+        "*.rs": "html"
+      },
+      "tailwindCSS.includeLanguages": {
+          "rust": "html",
+          "*.rs": "html"
+      },
+      "files.associations": {
+          "*.rs": "rust"
+      },
+      "editor.quickSuggestions": {
+        "other": "on",
+        "comments": "on",
+        "strings": true
+      },
+      "css.validate": false,
 }
