--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,12 @@ thiserror = "1.0.38"
 tracing = { version = "0.1.37", optional = true }
 http = "0.2.8"
 serde = {version = "1.0.164", features = ["derive"]}
-rusqlite = "0.29.0"
+serde_json = "1.0.64"
+sqlx = { version = "0.6.2", features = [
+	"runtime-tokio-rustls",
+	"sqlite",
+], optional = true }
+reqwest = { version = "0.11.4", features = ["json"]}
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
