--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+    "rust-analyzer.cargo.features": ["ssr"],
+
     "rust-analyzer.linkedProjects": [
         "./Cargo.toml",
         "./Cargo.toml",
