--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,6 @@ sqlx = { version = "0.6.2", features = [
 reqwest = { version = "0.11.4", features = ["json"]}
 
 [features]
-hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
 ssr = [
     "dep:axum", 
     "dep:tokio", 
@@ -45,6 +44,8 @@ ssr = [
     "leptos_router/ssr", 
     "dep:tracing"
 ]
+hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
+
 
 [package.metadata.cargo-all-features]
 denylist = [
@@ -54,7 +55,7 @@ denylist = [
     "tower-http",
     "leptos_axum",
 ]
-#skip_feature_sets = [["ssr", "hydrate"]]
+skip_feature_sets = [["ssr", "hydrate"]]
 
 [profile.wasm-release]
 inherits = "release"
