--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ axum = { version = "0.6.4", optional = true }
 console_error_panic_hook = "0.1"
 console_log = "1"
 cfg-if = "1"
-leptos = { version = "0.3", default-features = false, features = ["serde"] }
-leptos_axum = { version = "0.3", optional = true }
+leptos = { version = "0.3", default-features = false}
+leptos_axum = { version = "0.3", default-features = false, optional = true }
 leptos_meta = { version = "0.3", default-features = false }
 leptos_router = { version = "0.3", default-features = false }
 log = "0.4"
@@ -31,6 +31,7 @@ sqlx = { version = "0.6.2", features = [
 	"sqlite",
 ], optional = true }
 reqwest = { version = "0.11.4", features = ["json"]}
+
 
 [features]
 ssr = [
